--- a/write-it/package.json
+++ b/write-it/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@primeuix/themes": "^1.2.3",
+    "jwt-decode": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.0.1",
     "rxjs": "~7.8.0",
