--- a/write-it/package.json
+++ b/write-it/package.json
@@ -27,6 +27,8 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@ngrx/effects": "^20.1.0",
+    "@ngrx/store": "^20.1.0",
     "@primeuix/themes": "^1.2.3",
     "jwt-decode": "^4.0.0",
     "primeicons": "^7.0.0",
